--- a/manifest.json
+++ b/manifest.json
@@ -1,14 +1,16 @@
 {
   "manifest_version": 3,
   "name": "X Like → Article Outline",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "description": "When you like a tweet on X, automatically summarize the linked article and/or the tweet thread into an outline.",
   "action": {
-    "default_title": "Like Summaries",
-    "default_popup": "popup.html"
+    "default_title": "Like Summaries"
+  },
+  "side_panel": {
+    "default_path": "panel.html"
   },
   "options_page": "options.html",
-  "permissions": ["storage"],
+  "permissions": ["storage", "sidePanel", "tabs"],
   "host_permissions": [
     "https://x.com/*",
     "https://twitter.com/*",
